--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <header>
+      <h1>Whatever</h1>
       <nav>
-        <button>About</button>
+        <button>About Us</button>
         <button>Menu</button>
         <button>Contact</button>
       </nav>
@@ -16,5 +17,14 @@
     <div id="content">
 
     </div>
+    <footer>
+      <p>
+        Photo from <a
+          href="https://unsplash.com/es/@sharonmccutcheon?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        >Alexander Grey</a> in <a
+          href="https://unsplash.com/es/fotos/fotografia-con-bokeh-62vi3TG5EDg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        >Unsplash</a>
+      </p>
+    </footer>
   </body>
 </html>
