Add initial content + view transitions

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <header>
       <h1>Whatever</h1>
       <nav>
-        <button>About Us</button>
-        <button>Menu</button>
-        <button>Contact</button>
+        <button id="about" class="actual">About</button>
+        <button id="menu">Menu</button>
+        <button id="contact">Contact</button>
       </nav>
     </header>
     <div id="content">
