Test ESLint + Prettier

--- a/src/template.html
+++ b/src/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,16 +14,19 @@
         <button id="contact-btn">Contact</button>
       </nav>
     </header>
-    <div id="content">
-
-    </div>
+    <div id="content"></div>
     <footer>
       <p>
-        Photo from <a
+        Photo from
+        <a
           href="https://unsplash.com/es/@sharonmccutcheon?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
-        >Alexander Grey</a> in <a
+          >Alexander Grey</a
+        >
+        in
+        <a
           href="https://unsplash.com/es/fotos/fotografia-con-bokeh-62vi3TG5EDg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
-        >Unsplash</a>
+          >Unsplash</a
+        >
       </p>
     </footer>
   </body>
